fix URL for init

--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
 </head>
 <body>
     <p>A link to a To-Do App that built with HTML/CSS and a vanilla JavaScript</p>
-    <a href="/toDoApp/init/index.html">Vanilla</a>
+    <a href="./init/index.html">Vanilla</a>
 </body>
 </html>
