--- a/index.html
+++ b/index.html
@@ -8,5 +8,7 @@
 <body>
     <p>A link to a To-Do App that built with HTML/CSS and a vanilla JavaScript</p>
     <a href="./init/index.html">Vanilla</a>
+    <p>A link to a To-Do App that built with HTML/CSS/JS and NodeJS/Express/MongoDB server</p>
+    <a href="./mid/index.html">Vanilla with Back-End</a>
 </body>
 </html>
