Start working on the pro version and get the frontend to display data

--- a/index.html
+++ b/index.html
@@ -10,5 +10,7 @@
     <a href="./init/index.html">Vanilla</a>
     <p>A link to a To-Do App that built with HTML/CSS/JS and NodeJS/Express/MongoDB server</p>
     <a href="./mid/index.html">Vanilla with Back-End</a>
+    <p>A link to a To-Do App that built with HTML/CSS/JS and NodeJS/Express/MongoDB/React</p>
+    <a href="./pro/build/index.html">Vanilla with Back-End</a>
 </body>
 </html>
