update index.html and deployed MERN version

--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
 </head>
 <body>
     <p>A link to a To-Do App that built with HTML/CSS and a vanilla JavaScript</p>
-    <a href="./init/index.html">Vanilla</a>
+    <a href="./init/index.html" target="_blank">Vanilla</a>
     <p>A link to a To-Do App that built with HTML/CSS/JS and NodeJS/Express/MongoDB server</p>
-    <a href="./mid/index.html">Vanilla with Back-End</a>
+    <a href="./mid/index.html" target="_blank">Vanilla with Back-End</a>
     <p>A link to a To-Do App that built with HTML/CSS/JS and NodeJS/Express/MongoDB/React</p>
-    <a href="./pro/build/index.html">Vanilla with Back-End</a>
+    <a href="https://iridescent-mooncake-0fdeea.netlify.app/" target="_blank">React (MERN) To-Do App</a>
 </body>
 </html>
