Fix fetch statement

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <a href="./init/index.html" target="_blank">Vanilla</a>
     <p>A link to a To-Do App that built with HTML/CSS/JS and NodeJS/Express/MongoDB server</p>
     <a href="./mid/index.html" target="_blank">Vanilla with Back-End</a>
-    <p>A link to a To-Do App that built with HTML/CSS/JS and NodeJS/Express/MongoDB/React</p>
-    <a href="https://iridescent-mooncake-0fdeea.netlify.app/" target="_blank">React (MERN) To-Do App</a>
+    <p>A link to a To-Do App that built with NodeJS/Express/MongoDB/React</p>
+    <a href="https://super-cajeta-31f0c5.netlify.app/" target="_blank">React (MERN) To-Do App</a>
 </body>
 </html>
